@@ -9,6 +9,7 @@ Version 1.0.2 to be released
 - Bug: Fixed an issue in CUrlManager::createUrl when GET parameters contain arrays (Qiang)
 - New: Added CActiveRecord::getRelated() (Qiang)
 - New: Added 'return' option to HTML options in CHtml (Qiang)
+- New: Refactored CSS-dependent widgets by adding registerCssFile static methods (Qiang)
 
 
 Version 1.0.1 January 4, 2009
